--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,59 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="total_price">Rs. 268500</string>
+    <string name="addbtn_1">ADD</string>
+    <string name="casing_input">Select Casing</string>
+    <string name="hdd_input">ADD</string>
+    <string name="cooling_system_input">Select Cooling System</string>
+    <string name="power_and_cooling">Power and Cooling</string>
+    <string name="total">Total</string>
+    <string name="resetbtn_text">RESET</string>
+    <string name="savebtn_text">Save</string>
+    <string name="configure_parts">Configure Parts</string>
+    <string name="casing">Casing</string>
+    <string name="core_component">Core Component</string>
+    <string name="hard_drive">Hard Drive</string>
+    <string name="ram">16GB 2666 DDR4</string>
+    <string name="pc_build_one">PC Build One</string>
+    <string name="build_price1">Rs. 135000</string>
+    <string name="config1_build">CPU : Core i3 9th Gen.\nRAM : 8GB\nMotherboard : Corsair\nHDD : 1TB</string>
+    <string name="updatebtn">UPDATE</string>
+    <string name="deletebtn">DELETE</string>
+    <string name="pc_build2_price">Rs. 135000</string>
+    <string name="build_price3">Rs. 135000</string>
+    <string name="saved_nconfigurations">Saved\nConfigurations</string>
+    <string name="config2_build">CPU : Core i7 9th Gen.\nRAM : 16GB\nMotherboard : Asus Pro\nHDD : 2TB</string>
+    <string name="config3_build">CPU : Core i5 9th Gen.\nRAM : 16GB\nMotherboard : Gigabyte\nHDD : 4TB</string>
+    <string name="pc_build_three">PC Build Three</string>
+    <string name="pc_build_two">PC Build Two</string>
+    <string name="create_pcbtn">Create\nPC</string>
+    <string name="saved_confbtn">SAVED\nCONF.</string>
+    <string name="pc_configuration_station">PC Configuration\nStation</string>
+    <string name="proc_price1">RS. 162000</string>
+    <string name="proc_price2">RS. 125000</string>
+    <string name="proc_price3">RS. 100000</string>
+    <string name="pros_detail1">CPU Cores : 16\nThreads : 32\nBase Clock : 3.5GHz\nMax Boost Clock : 4.7GHz\nL1 Cache : 1MB\nL2 Cache : 8MB\nL3 Cache : 64MB\nWarranty : 3Yrs</string>
+    <string name="pros_detail2">CPU Cores : 10\nThreads : 20\nBase Clock : 3.7GHz\nMax Boost Clock : 5.3GHz\nL1 Cache : 1MB\nL2 Cache : 8MB\nL3 Cache : 64MB\nWarranty : 3Yrs</string>
+    <string name="pros_detail4">CPU Cores : 12\nThreads : 24\nBase Clock : 3.8GHz\nMax Boost Clock : 4.6GHz\nL1 Cache : 1MB\nL2 Cache : 6MB\nL3 Cache : 64MB\nWarranty : 3Yrs</string>
+    <string name="prosessors">Prosessors</string>
+    <string name="selectbtn">SELECT</string>
+    <string name="pros_name1">AMD RYZEN™ 9 3950X</string>
+    <string name="pros_name2">INTEL® CORE™ I9-10900K</string>
+    <string name="pros_name3">INTEL® CORE™ I7-10700K</string>
+    <string name="pros_name4">AMD RYZEN™ 9 3900X</string>
+    <string name="proc_price4">RS. 86000</string>
+    <string name="pros_details3">CPU Cores : 8\nThreads : 16\nBase Clock : 3.8GHz\nMax Boost Clock : 5.1GHz\nL1 Cache : 1MB\nL2 Cache : 8MB\nL3 Cache : 64MB\nWarranty : 3Yrs</string>
+    <string name="zero_total">Rs. 0</string>
+    <string name="select_casing_hint">Select Casing</string>
+    <string name="select_cooling_system_hint">Select Cooling System</string>
+    <string name="select_power_supply_hint">Select Power Supply</string>
+    <string name="select_m2_ssd_hint">Select M2. SSD</string>
+    <string name="select_ram_hint">Select RAM</string>
+    <string name="select_hard_drive_hint">Select Hard Drive</string>
+    <string name="select_cpu_hint">Select CPU</string>
+    <string name="select_motherboard_hint">Select Motherboard</string>
+    <string name="select_gpu_hint">Select GPU</string>
+    <string name="save_btn">Save</string>
+    <string name="reset_btn">RESET</string>
 </resources>
